scrollbar fix for sidebar on lower resolutions

--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -302,6 +302,7 @@ label {
 
 #sidebar {
   margin-right: 15px;
+  overflow: auto;
 }
 
 #sidebar-inner {
